--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <header class="cabecalho">
+        <img class="logo" src="https://static.tildacdn.com/tild3130-6332-4064-b365-333031663538/logo.svg" alt="Logo">
+        <div class="opcoes_link">
+            <a class="link" href="">Our rates</a>
+            <a class="link" href="">Favorite projects</a>
+            <a class="link" href="">Review</a>
+            <a class="link" href="">Contact</a>
+        </div>
+    </header>
     
 </body>
 </html>
