--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <Section class="corpo">
+        <div class="texto">
+            <h1 class="titulo">The outsourcing team of your dreams</h1>
+            <p class="paragrafo">We provide full transparency of development process, so you can stay on top of your business needs</p>
+            <a class="acesso" href="">REQUEST ACCESS</a>
+        </div>
+
+        <div class="imagem">
+            <img src="imagem/imagem.png" alt="imagem">
+        </div>
+    </Section>
 </body>
 </html>
