--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
 
     <header class="cabecalho">
@@ -17,11 +19,12 @@
             <a class="link" href="">Contact</a>
         </div>
     </header>
-   
+
     <Section class="corpo">
         <div class="texto">
             <h1 class="titulo">The outsourcing team of your dreams</h1>
-            <p class="paragrafo">We provide full transparency of development process, so you can stay on top of your business needs</p>
+            <p class="paragrafo">We provide full transparency of development process, so you can stay on top of your
+                business needs</p>
             <a class="acesso" href="">REQUEST ACCESS</a>
         </div>
 
@@ -29,6 +32,41 @@
             <img src="imagem/imagem.png" alt="imagem">
         </div>
     </Section>
+    <section class="parte3">
+        <div class="parte3Img">
+            <img src="imagem/imagem2.png" alt="">
+        </div>
+
+        <div class="parte3tex">
+            <div class="nome">
+                <h1>What we do</h1>
+            </div>
+            <div class="cima">
+                <div class="primeiro">
+                    <img src="imagem/fig1.png" alt="">
+                    <h2>HIGH-PERFORMANCE BACKEND</h2>
+                    <p>Our backends serve thousands of RPS</p>
+                </div>
+
+                <div class="segundo">
+                    <img src="imagem/fig2.png" alt="">
+                    <h2>MODERN FRONTEND</h2>
+                    <p>Native mobile applications and web sites</p>
+                </div>
+            </div>
+            <div class="baixo">
+                <div class="terceiro">
+                    <img src="imagem/fig3.png" alt="">
+                    <h2>SYSTEM ARCHITECTURE, DEVOPS, QA...</h2>
+                    <p>...and all other necessary stuff we take care for you</p>
+                </div>
+                <div class="quarto">
+                    <a class="acesso" href="">REQUEST ACCESS</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
+
 </html>
