--- a/index.html
+++ b/index.html
@@ -30,5 +30,30 @@
         </div>
     </Section>
 
+    <section class="Key">
+        <div class="Key_titulo">
+            <p class="key_tit">Key features</p>
+        </div>
+        <div class="cards">
+            <div class="text_1">
+                <img class="key_img" src="imagem/fig_mens.jpeg" alt="">
+                <h4 class="tit_tex">PERSONAL MANAGER</h4>
+                <h5 class="tex">Available in the Pacific Time Zone working hours</h5>
+            </div>
+            <div class="text_2">
+                <img class="key_img" src="imagem/fig_money.jpeg" alt="">
+                <h4 class="tit_tex">CLEAR BUDGET</h4>
+                <h5 class="tex">We provide detailed estimates. You agree to everything before we start</h5>
+            </div>
+            <div class="text_3">
+                <img class="key_img" src="imagem/fig_note.jpeg" alt="">
+                <h4 class="tit_tex">REALTIME DASHBOARD</h4>
+                <h4 class="tit_text">COMING SOON</h4>
+                <h5 class="tex">Integrated dashboard providing full control over the development process</h5>            
+            </div>  
+        </div>
+    </section>
+
+
 </body>
 </html>
